--- a/styles.less
+++ b/styles.less
@@ -1,8 +1,8 @@
 @width: 100%;
 @height: 100vh;
-@textheaderheight: 70px;
+@textheaderheight: 150px;
 // @playerheight: calc(@height - @textheaderheight);
-
+@buttonposition: 35vh;
 @buttonsize: 100px;
 
 
@@ -26,7 +26,7 @@ body{
 
 #spacer{
   width: 100%;
-  height: calc(50vh - @buttonsize/2);
+  height: calc(@buttonposition - @buttonsize/2);
   // background-color: green;
 }
 
@@ -37,7 +37,7 @@ body{
   position: sticky;
   top:0px;
   // margin-top: calc(50vh - @buttonsize/2);
-  margin-bottom: calc(50vh - @buttonsize/2 - @textheaderheight);
+  margin-bottom: calc((100vh - @buttonposition) - @buttonsize/2 - @textheaderheight);
 
 }
 
