--- a/styles.less
+++ b/styles.less
@@ -1,6 +1,6 @@
 @width: 100%;
 @height: 100vh;
-@textheaderheight: 150px;
+@textheaderheight: 220px;
 // @playerheight: calc(@height - @textheaderheight);
 @buttonposition: 35vh;
 @buttonsize: 100px;
@@ -12,6 +12,7 @@ body{
   /* padding:10px; */
   width:@width;
   height:@height;
+  // scroll-behavior: smooth;
   // display: none;
   // border: black solid 8px;
   // box-sizing: border-box;
@@ -60,9 +61,31 @@ body{
 }
 
 #textWrapper{
+  padding: 0 4px;
   // margin-top: calc(100vh - 40px);
   max-width: 600px;
   margin:auto;
   min-height: @height;
   padding-bottom: 10vh;
+}
+
+
+
+
+#skipWarning{
+  padding-bottom: 50vh;
+  display: none;
+
+  max-width: 600px;
+  padding: 0 4px;
+  margin: auto;
+  margin-top: 90vh;
+  height:50vh
+
+}
+
+#unlockSkipping{
+  cursor: pointer;
+  text-decoration: underline;
+  color: blue;
 }
