--- a/styles.less
+++ b/styles.less
@@ -12,7 +12,7 @@ body{
   /* padding:10px; */
   width:@width;
   height:@height;
-  // scroll-behavior: smooth;
+  scroll-behavior: smooth;
   // display: none;
   // border: black solid 8px;
   // box-sizing: border-box;
